--- a/backend-drf/.env
+++ b/backend-drf/.env
@@ -1,2 +1,2 @@
-SECRET_KEY=*^(bi5z8^nfs3!xjp%e81av6&)hpa#ip+zo_%c*&vduxf$q38c
+SECRET_KEY=2&1&s4hg_&!ow65z$10ao02^3tfq3@i04ds#7kmrm%5=o+%w&#
 DEBUG = True
